--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dev": " yarn fix &&  yarn start "
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.2.2",
     "@react-navigation/drawer": "^6.4.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
@@ -24,8 +25,10 @@
     "axios": "^0.27.2",
     "expo": "~45.0.0",
     "expo-auth-session": "~3.6.1",
+    "expo-font": "~10.1.0",
     "expo-random": "~12.2.0",
     "expo-status-bar": "~1.3.0",
+    "expo-updates": "~0.13.2",
     "native-base": "^3.4.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -46,8 +49,8 @@
     "@types/react-native": "~0.66.13",
     "@typescript-eslint/eslint-plugin": "^5.26.0",
     "@typescript-eslint/parser": "^5.26.0",
-    "eslint": "^8.16.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
+    "eslint": "^8.16.0",
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.5.0",
     "eslint-plugin-react-native": "^4.0.0",
